opam-version: "2.0"
synopsis: "An OCaml library for category theory and abstract algebra"
maintainer: ["john@haley.io"]
authors: ["John Haley"]
license: "BSD-3-Clause"
tags: ["category theory" "abstract algebra" "algebra" "cats"]
homepage: "https://github.com/johnhaley81/bastet"
doc: "https://johnhaley81.github.io/bastet"
bug-reports: "https://github.com/johnhaley81/bastet/issues"
depends: [
  "ocaml" {>= "4.08"}
  "alcotest" {>= "1.0.1" & with-test}
  "qcheck" {>= "0.13" & < "0.18" & with-test}
  "qcheck-alcotest" {>= "0.13" & < "0.18" & with-test}
  "mdx" {>= "1.6.0" & with-test}
  "odoc" {>= "1.5.0" & with-doc}
  "mustache" {>= "3.1.0" & with-doc}
  "dune" {dev}
  "melange" {dev}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/johnhaley81/bastet.git"
