opam-version: "2.0"
synopsis: "A Melange-focused fork of Bastet for category theory and abstract algebra"
maintainer: ["john@haley.io"]
authors: ["John Haley"]
license: "BSD-3-Clause"
tags: ["category theory" "abstract algebra" "algebra" "cats"]
homepage: "https://github.com/johnhaley81/mel-bastet"
doc: "https://johnhaley81.github.io/mel-bastet"
bug-reports: "https://github.com/johnhaley81/mel-bastet/issues"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.0"}
  "melange" {>= "1.0.0"}
  "alcotest" {with-test}
  "qcheck" {with-test}
  "qcheck-core" {with-test} 
  "qcheck-alcotest" {with-test}
  "fmt" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/johnhaley81/mel-bastet.git"
